--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header {
 
 body {
     width: 1024px;
-    height: 1490px;
+    height: 1480px;
     margin-top: 00px;
     margin-right: auto;
     margin-bottom: 0px;
@@ -65,6 +65,20 @@ body {
     font-style: normal;
     font-weight: normal;   
     color: black;
+}
+
+footer {
+    height: 20px;
+    background-color: #F89609;
+    margin-top: 37px;
+    margin-bottom: 0;
+    font-family: "Benton Sans Comp Book", Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: normal;   
+    color: black;
+    text-align: right;
+    padding-right: 10px; 
 }
 
 table {
